2/14/12 change units on concentration control to match appropriate units for specific solution
2/14/12 hide concentration control for pure water
2/14/12 base class for solutions
2/14/12 add stroke around color chips in combo boxes, sames as for fluids
2/14/12 add pure water to the list of solutions (even though it's not technically a solution)
2/14/12 use different solution models for the 2 tabs, needs are very different
2/11/12 add wire to AT detector, standardize wire colors
2/11/12 preliminary pass at AT detector
2/11/12 debug node that display model and view locations
2/9/12 make center of concentration probe transparent, so you can see the fluid that the crosshairs are on [61163]
2/9/12 fix: concentration meter continues to read a value after dropper is turned off
# 0.00.09 (61151) Feb 9, 2012
2/9/12 change request: make concentration meter cable curvy (ala Bending Light)
2/9/12 change request: move initial location of concentration probe below left of body (outside beaker)
2/6/12 add location to Light model
2/6/12 use public CompositeProperty for derived properties
2/6/12 placeholder for concentration control
2/6/12 reuse the Solute combo box for Solutions, parameterize the format of the combo box item labels
2/6/12 first pass at drag handle for cuvette width, has a few warts
2/2/12 add images for absorbance meter
2/2/12 change color of concentration meter/probe/wire, so it's different from absorbance meter
2/2/12 encapsulate algorithm used to create the stroke color from a solution color
2/2/12 add Water solvent
2/2/12 add sim-sharing for non-interactive objects in the play area
2/2/12 add cuvette model and view
2/2/12 add model-view transform, specify the ruler length as a function of the max cuvette width
2/2/12 add ruler to view
2/2/12 add Reset All button to 2nd tab, in same location as 1st tab
2/2/12 wrapper for WavelengthControl to use Property<Double>
# 0.00.08 (60959) Feb 2, 2012